--- a/_posts/2024-04-10-experior.markdown
+++ b/_posts/2024-04-10-experior.markdown
@@ -5,7 +5,7 @@ date:   2024-04-10 00:00:00 +00:00
 categories: research
 authors: "Vahid Balazadeh, <strong>Keertana Chidambaram</strong>, Viet Nguyen, Rahul G Krishnan, Vasilis Syrgkanis"
 # subtitle: "CCD 2017"
-venue: "NeurIPS 2024"
+venue: "NeurIPS"
 arxiv: https://arxiv.org/pdf/2404.07266
 ---
 <!-- Technical and design details of the Intel RealSense R200 and D400 series -->
