Update post title to include 'The Necessity of Ternary Preferences'

--- a/_posts/2025-03-04-dpo.markdown
+++ b/_posts/2025-03-04-dpo.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Direct Preference Optimization With Unobserved Preference Heterogeneity"
+title:  "Direct Preference Optimization With Unobserved Preference Heterogeneity: The Necessity of Ternary Preferences"
 categories: research
 authors: "<strong>Keertana Chidambaram</strong>, Karthik Vinay Seetharaman, Vasilis Syrgkanis"
 ## subtitle: "CCD 2017"
